--- a/MovieDemo/View/Base.lproj/Main.storyboard
+++ b/MovieDemo/View/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pio-X9-aHV">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pio-X9-aHV" customClass="ScrollableTabView" customModule="MovieDemo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="414" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="qRp-qo-n9j"/>
