--- a/MovieDemo/View/MovieDetail/MovieDetail.storyboard
+++ b/MovieDemo/View/MovieDetail/MovieDetail.storyboard
@@ -14,9 +14,24 @@
                     <view key="view" contentMode="scaleToFill" id="l5U-3T-CTT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CMB-tc-OHz">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="leading" secondItem="0MY-oo-jOz" secondAttribute="leading" id="5Zm-kh-o7v"/>
+                            <constraint firstItem="0MY-oo-jOz" firstAttribute="trailing" secondItem="CMB-tc-OHz" secondAttribute="trailing" id="5eM-t8-Hxx"/>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="top" secondItem="0MY-oo-jOz" secondAttribute="top" id="Opz-OU-pdQ"/>
+                            <constraint firstItem="0MY-oo-jOz" firstAttribute="bottom" secondItem="CMB-tc-OHz" secondAttribute="bottom" id="X5g-zF-tbt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0MY-oo-jOz"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="CMB-tc-OHz" id="rbT-S7-Hob"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b99-AU-cKR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
