--- a/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
@@ -9,36 +9,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="101" id="KGk-i7-Jjw" customClass="CastIntroCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="101"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="159" id="KGk-i7-Jjw" customClass="CastIntroCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="417" height="159"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="379" height="101"/>
+                <rect key="frame" x="0.0" y="0.0" width="417" height="159"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kVp-b7-izb">
-                        <rect key="frame" x="0.0" y="0.0" width="379" height="101"/>
+                        <rect key="frame" x="8" y="41" width="409" height="118"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q0g-jn-8pE">
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q0g-jn-8pE">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演職員" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6CN-wC-Q0f">
+                        <rect key="frame" x="8" y="0.0" width="43" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="kVp-b7-izb" secondAttribute="trailing" id="22r-e1-JEe"/>
+                    <constraint firstItem="6CN-wC-Q0f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4nR-Y6-NqU"/>
                     <constraint firstAttribute="bottom" secondItem="kVp-b7-izb" secondAttribute="bottom" id="T3w-HU-Ns5"/>
-                    <constraint firstItem="kVp-b7-izb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Tn3-IU-oOA"/>
-                    <constraint firstItem="kVp-b7-izb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="UsN-CP-HZR"/>
+                    <constraint firstItem="kVp-b7-izb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tn3-IU-oOA"/>
+                    <constraint firstItem="kVp-b7-izb" firstAttribute="top" secondItem="6CN-wC-Q0f" secondAttribute="bottom" constant="24" id="UsN-CP-HZR"/>
+                    <constraint firstItem="6CN-wC-Q0f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="YYp-do-XYg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="collectionView" destination="kVp-b7-izb" id="G1g-YJ-kh9"/>
             </connections>
-            <point key="canvasLocation" x="180.43478260869566" y="171.76339285714286"/>
+            <point key="canvasLocation" x="207.97101449275365" y="191.18303571428569"/>
         </tableViewCell>
     </objects>
 </document>
