--- a/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                        <rect key="frame" x="8" y="24" width="150" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8tY-3d-s7x">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -45,13 +45,13 @@
                         </constraints>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
-                        <rect key="frame" x="374" y="18" width="31" height="14.5"/>
+                        <rect key="frame" x="366" y="42" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
-                        <rect key="frame" x="0.0" y="58" width="405" height="14.5"/>
+                        <rect key="frame" x="8" y="82" width="397" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -59,18 +59,18 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="iO0-Up-eNF" secondAttribute="trailing" id="Bpt-3N-rMj"/>
-                    <constraint firstItem="iO0-Up-eNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MXk-V2-vrc"/>
-                    <constraint firstAttribute="trailing" secondItem="PAd-fT-Mnd" secondAttribute="trailing" id="R2w-KC-NaQ"/>
-                    <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cxT-WJ-Krf"/>
+                    <constraint firstItem="iO0-Up-eNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MXk-V2-vrc"/>
+                    <constraint firstAttribute="trailing" secondItem="PAd-fT-Mnd" secondAttribute="trailing" constant="8" id="R2w-KC-NaQ"/>
+                    <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cxT-WJ-Krf"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="top" secondItem="72P-Sd-BUa" secondAttribute="bottom" constant="8" id="dSE-XQ-gae"/>
-                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="joH-pf-nRH"/>
+                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="joH-pf-nRH"/>
                     <constraint firstItem="PAd-fT-Mnd" firstAttribute="centerY" secondItem="8tY-3d-s7x" secondAttribute="centerY" id="k3h-Ax-1se"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="postTimeLabel" destination="zH8-7M-Y80" id="S5k-Wu-FjL"/>
-                <outlet property="replyCountLabel" destination="PAd-fT-Mnd" id="Dns-aE-Txj"/>
+                <outlet property="usefulCountLabel" destination="PAd-fT-Mnd" id="Dns-aE-Txj"/>
                 <outlet property="userImageView" destination="8tY-3d-s7x" id="1mm-KQ-Q6j"/>
                 <outlet property="userNameLabel" destination="iJc-XE-89N" id="YPk-aS-mKw"/>
             </connections>
