展開動畫跳過

--- a/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
@@ -28,7 +28,7 @@
                     </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演職員" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6CN-wC-Q0f">
                         <rect key="frame" x="8" y="0.0" width="43" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
