--- a/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="CommentCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="105"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="CommentCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="416" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="405" height="105"/>
+                <rect key="frame" x="0.0" y="0.0" width="416" height="156"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
-                        <rect key="frame" x="8" y="24" width="150" height="50"/>
+                        <rect key="frame" x="8" y="65" width="150" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8tY-3d-s7x">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -45,36 +45,46 @@
                         </constraints>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
-                        <rect key="frame" x="366" y="42" width="31" height="14.5"/>
+                        <rect key="frame" x="377" y="83" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
-                        <rect key="frame" x="8" y="82" width="397" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
+                        <rect key="frame" x="8" y="123" width="400" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="熱評" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHg-ry-MTG">
+                        <rect key="frame" x="8" y="24" width="29" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="iO0-Up-eNF" secondAttribute="trailing" id="Bpt-3N-rMj"/>
+                    <constraint firstAttribute="trailing" secondItem="iO0-Up-eNF" secondAttribute="trailing" constant="8" id="Bpt-3N-rMj"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MXk-V2-vrc"/>
                     <constraint firstAttribute="trailing" secondItem="PAd-fT-Mnd" secondAttribute="trailing" constant="8" id="R2w-KC-NaQ"/>
+                    <constraint firstItem="eHg-ry-MTG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="aPT-Ro-ofB"/>
                     <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cxT-WJ-Krf"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="top" secondItem="72P-Sd-BUa" secondAttribute="bottom" constant="8" id="dSE-XQ-gae"/>
-                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="joH-pf-nRH"/>
+                    <constraint firstItem="eHg-ry-MTG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="jND-OY-kKo"/>
+                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="eHg-ry-MTG" secondAttribute="bottom" constant="24" id="joH-pf-nRH"/>
                     <constraint firstItem="PAd-fT-Mnd" firstAttribute="centerY" secondItem="8tY-3d-s7x" secondAttribute="centerY" id="k3h-Ax-1se"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="categoryLabel" destination="eHg-ry-MTG" id="wKx-bU-VPW"/>
+                <outlet property="contentLabel" destination="iO0-Up-eNF" id="P1I-Tt-LAO"/>
                 <outlet property="postTimeLabel" destination="zH8-7M-Y80" id="S5k-Wu-FjL"/>
                 <outlet property="usefulCountLabel" destination="PAd-fT-Mnd" id="Dns-aE-Txj"/>
                 <outlet property="userImageView" destination="8tY-3d-s7x" id="1mm-KQ-Q6j"/>
                 <outlet property="userNameLabel" destination="iJc-XE-89N" id="YPk-aS-mKw"/>
             </connections>
-            <point key="canvasLocation" x="199.27536231884059" y="173.10267857142856"/>
+            <point key="canvasLocation" x="207.24637681159422" y="190.17857142857142"/>
         </tableViewCell>
     </objects>
     <resources>
