--- a/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CastIntroCell.xib
@@ -3,21 +3,22 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="159" id="KGk-i7-Jjw" customClass="CastIntroCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="417" height="159"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="169" id="KGk-i7-Jjw" customClass="CastIntroCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="420" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="417" height="159"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="169"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kVp-b7-izb">
-                        <rect key="frame" x="8" y="41" width="409" height="118"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kVp-b7-izb">
+                        <rect key="frame" x="8" y="41" width="404" height="104"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q0g-jn-8pE">
                             <size key="itemSize" width="128" height="128"/>
@@ -26,27 +27,46 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演職員" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6CN-wC-Q0f">
-                        <rect key="frame" x="8" y="0.0" width="43" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FOb-bE-JT4">
+                        <rect key="frame" x="8" y="0.0" width="53" height="17"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjw-5G-oTF">
+                                <rect key="frame" x="0.0" y="0.0" width="2" height="16"/>
+                                <color key="backgroundColor" name="SubColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="2" id="KKQ-wZ-gpP"/>
+                                    <constraint firstAttribute="height" constant="16" id="uQb-aq-Heh"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演職員" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6CN-wC-Q0f">
+                                <rect key="frame" x="10" y="0.0" width="43" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="kVp-b7-izb" secondAttribute="trailing" id="22r-e1-JEe"/>
-                    <constraint firstItem="6CN-wC-Q0f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4nR-Y6-NqU"/>
-                    <constraint firstAttribute="bottom" secondItem="kVp-b7-izb" secondAttribute="bottom" id="T3w-HU-Ns5"/>
+                    <constraint firstItem="FOb-bE-JT4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2rn-aq-Xfd"/>
+                    <constraint firstItem="FOb-bE-JT4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="AC0-xr-nC4"/>
+                    <constraint firstAttribute="bottom" secondItem="kVp-b7-izb" secondAttribute="bottom" constant="24" id="Fi0-xo-T0t"/>
+                    <constraint firstItem="kVp-b7-izb" firstAttribute="top" secondItem="FOb-bE-JT4" secondAttribute="bottom" constant="24" id="RPP-KC-72i"/>
                     <constraint firstItem="kVp-b7-izb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tn3-IU-oOA"/>
-                    <constraint firstItem="kVp-b7-izb" firstAttribute="top" secondItem="6CN-wC-Q0f" secondAttribute="bottom" constant="24" id="UsN-CP-HZR"/>
-                    <constraint firstItem="6CN-wC-Q0f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="YYp-do-XYg"/>
+                    <constraint firstAttribute="trailing" secondItem="kVp-b7-izb" secondAttribute="trailing" constant="8" id="oNC-zC-X18"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="categoryLabel" destination="6CN-wC-Q0f" id="UOh-sO-bqD"/>
                 <outlet property="collectionView" destination="kVp-b7-izb" id="G1g-YJ-kh9"/>
             </connections>
-            <point key="canvasLocation" x="207.97101449275365" y="191.18303571428569"/>
+            <point key="canvasLocation" x="210.1449275362319" y="194.53125"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="SubColor">
+            <color red="0.9560219646" green="0.094706065950000001" blue="0.40842247009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
