--- a/MovieDemo/View/MovieDetail/Cell/CollectionViewCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CollectionViewCell.xib
@@ -10,43 +10,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="207" height="322"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="207" height="322"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="nxB-Q3-ElL">
-                        <rect key="frame" x="48" y="30" width="100" height="142.5"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LrJ-yp-QZp">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="EjQ-jR-Yu5"/>
-                                    <constraint firstAttribute="width" constant="100" id="P0d-vU-YSS"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylY-ij-7hV">
-                                <rect key="frame" x="29" y="122" width="42" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LrJ-yp-QZp">
+                        <rect key="frame" x="0.0" y="0.0" width="207" height="276"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="LrJ-yp-QZp" secondAttribute="height" multiplier="3:4" id="Lg8-ZC-icv"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylY-ij-7hV">
+                        <rect key="frame" x="0.0" y="284" width="207" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="nxB-Q3-ElL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="Jj8-iD-IrL"/>
-                <constraint firstItem="nxB-Q3-ElL" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="g1k-Lz-auq"/>
+                <constraint firstAttribute="trailing" secondItem="ylY-ij-7hV" secondAttribute="trailing" id="Ai6-qG-gum"/>
+                <constraint firstAttribute="trailing" secondItem="LrJ-yp-QZp" secondAttribute="trailing" id="CMg-wQ-Ele"/>
+                <constraint firstItem="LrJ-yp-QZp" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="MtF-Xg-3WQ"/>
+                <constraint firstItem="ylY-ij-7hV" firstAttribute="top" secondItem="LrJ-yp-QZp" secondAttribute="bottom" constant="8" id="PNn-Ty-IGG"/>
+                <constraint firstItem="LrJ-yp-QZp" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YsB-ic-i94"/>
+                <constraint firstAttribute="bottom" secondItem="ylY-ij-7hV" secondAttribute="bottom" constant="8" id="bch-MS-hN0"/>
+                <constraint firstItem="ylY-ij-7hV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="raL-oN-7b0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="196" height="220"/>
+            <size key="customSize" width="203" height="342"/>
             <connections>
                 <outlet property="castImageView" destination="LrJ-yp-QZp" id="QI8-NF-hpS"/>
                 <outlet property="descLabel" destination="ylY-ij-7hV" id="Pjw-bx-n06"/>
             </connections>
-            <point key="canvasLocation" x="243.47826086956525" y="209.59821428571428"/>
+            <point key="canvasLocation" x="247.10144927536234" y="250.44642857142856"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="placeholder" width="987" height="777"/>
+    </resources>
 </document>
