--- a/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="CommentCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="416" height="156"/>
+            <rect key="frame" x="0.0" y="0.0" width="419" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="416" height="156"/>
+                <rect key="frame" x="0.0" y="0.0" width="419" height="156"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
-                        <rect key="frame" x="8" y="65" width="150" height="50"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
+                        <rect key="frame" x="8" y="41" width="128" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8tY-3d-s7x">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -28,13 +28,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJc-XE-89N">
-                                <rect key="frame" x="69" y="0.0" width="31" height="50"/>
+                                <rect key="frame" x="58" y="0.0" width="31" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.36585468049999997" green="0.38767564300000001" blue="0.75911223890000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-7M-Y80">
-                                <rect key="frame" x="119" y="0.0" width="31" height="50"/>
+                                <rect key="frame" x="97" y="0.0" width="31" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" name="HomeTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -45,52 +45,68 @@
                         </constraints>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
-                        <rect key="frame" x="377" y="83" width="31" height="14.5"/>
+                        <rect key="frame" x="380" y="59" width="31" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.34957158570000002" green="0.41883793470000003" blue="0.706436336" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
+                        <rect key="frame" x="8" y="99" width="403" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
-                        <rect key="frame" x="8" y="123" width="400" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="熱評" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHg-ry-MTG">
-                        <rect key="frame" x="8" y="24" width="29" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="SlI-24-RyD">
+                        <rect key="frame" x="8" y="0.0" width="39" height="17"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAx-qX-kh2">
+                                <rect key="frame" x="0.0" y="0.5" width="2" height="16"/>
+                                <color key="backgroundColor" name="SubColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="2" id="D9t-bw-UOb"/>
+                                    <constraint firstAttribute="height" constant="16" id="WMR-lY-sev"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="熱評" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTN-oM-BPZ">
+                                <rect key="frame" x="10" y="0.0" width="29" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="SlI-24-RyD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="3J0-Gm-BcE"/>
+                    <constraint firstItem="SlI-24-RyD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="5HC-DF-xQP"/>
                     <constraint firstAttribute="trailing" secondItem="iO0-Up-eNF" secondAttribute="trailing" constant="8" id="Bpt-3N-rMj"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MXk-V2-vrc"/>
                     <constraint firstAttribute="trailing" secondItem="PAd-fT-Mnd" secondAttribute="trailing" constant="8" id="R2w-KC-NaQ"/>
-                    <constraint firstItem="eHg-ry-MTG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="aPT-Ro-ofB"/>
                     <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cxT-WJ-Krf"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="top" secondItem="72P-Sd-BUa" secondAttribute="bottom" constant="8" id="dSE-XQ-gae"/>
-                    <constraint firstItem="eHg-ry-MTG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="jND-OY-kKo"/>
-                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="eHg-ry-MTG" secondAttribute="bottom" constant="24" id="joH-pf-nRH"/>
+                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="SlI-24-RyD" secondAttribute="bottom" constant="24" id="ih7-V3-vs3"/>
                     <constraint firstItem="PAd-fT-Mnd" firstAttribute="centerY" secondItem="8tY-3d-s7x" secondAttribute="centerY" id="k3h-Ax-1se"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="categoryLabel" destination="eHg-ry-MTG" id="wKx-bU-VPW"/>
+                <outlet property="categoryStackView" destination="SlI-24-RyD" id="wXi-62-SmW"/>
                 <outlet property="contentLabel" destination="iO0-Up-eNF" id="P1I-Tt-LAO"/>
                 <outlet property="postTimeLabel" destination="zH8-7M-Y80" id="S5k-Wu-FjL"/>
                 <outlet property="usefulCountLabel" destination="PAd-fT-Mnd" id="Dns-aE-Txj"/>
                 <outlet property="userImageView" destination="8tY-3d-s7x" id="1mm-KQ-Q6j"/>
                 <outlet property="userNameLabel" destination="iJc-XE-89N" id="YPk-aS-mKw"/>
             </connections>
-            <point key="canvasLocation" x="207.24637681159422" y="190.17857142857142"/>
+            <point key="canvasLocation" x="209.42028985507247" y="189.50892857142856"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="placeholder" width="987" height="777"/>
         <namedColor name="HomeTextColor">
             <color red="0.4440000057220459" green="0.44800001382827759" blue="0.45199999213218689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SubColor">
+            <color red="0.9560219646" green="0.094706065950000001" blue="0.40842247009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
