--- a/MovieDemo/View/MovieDetail/Cell/MovieIntroCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/MovieIntroCell.xib
@@ -3,45 +3,64 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="KGk-i7-Jjw" customClass="MovieIntroCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="421" height="134"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="MovieIntroCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="421" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="421" height="134"/>
+                <rect key="frame" x="0.0" y="0.0" width="421" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="劇情簡介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFd-vi-hVg">
-                        <rect key="frame" x="8" y="24" width="57.5" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhP-5i-w6B" customClass="ExpandableLabel" customModule="MovieDemo" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhP-5i-w6B">
                         <rect key="frame" x="8" y="65" width="405" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I1l-2z-I8F">
+                        <rect key="frame" x="8" y="24" width="67.5" height="17"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFz-ho-S2e">
+                                <rect key="frame" x="0.0" y="0.5" width="2" height="16"/>
+                                <color key="backgroundColor" name="SubColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="2" id="sCK-Bu-o65"/>
+                                    <constraint firstAttribute="height" constant="16" id="sIh-Wy-CMq"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="劇情簡介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFd-vi-hVg">
+                                <rect key="frame" x="10" y="0.0" width="57.5" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="AhP-5i-w6B" secondAttribute="trailing" constant="8" id="D2n-Zj-uNJ"/>
-                    <constraint firstItem="MFd-vi-hVg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Rhp-Ti-UjD"/>
-                    <constraint firstItem="AhP-5i-w6B" firstAttribute="top" secondItem="MFd-vi-hVg" secondAttribute="bottom" constant="24" id="WhY-r7-JCb"/>
+                    <constraint firstItem="I1l-2z-I8F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="fUF-HZ-rai"/>
+                    <constraint firstItem="AhP-5i-w6B" firstAttribute="top" secondItem="I1l-2z-I8F" secondAttribute="bottom" constant="24" id="oT0-gZ-koK"/>
                     <constraint firstItem="AhP-5i-w6B" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="r0u-7s-TNx"/>
-                    <constraint firstItem="MFd-vi-hVg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="zZM-eH-Yd8"/>
+                    <constraint firstItem="I1l-2z-I8F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="x5J-5C-22i"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="contentLabel" destination="AhP-5i-w6B" id="Xc6-t8-8LD"/>
             </connections>
-            <point key="canvasLocation" x="210.86956521739131" y="182.8125"/>
+            <point key="canvasLocation" x="210.86956521739131" y="177.79017857142856"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="SubColor">
+            <color red="0.9560219646" green="0.094706065950000001" blue="0.40842247009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
