--- a/MovieDemo/View/MovieDetail/Cell/MovieIntroCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/MovieIntroCell.xib
@@ -10,24 +10,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="MovieIntroCell" customModule="MovieDemo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="MovieIntroCell" customModule="MovieDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="421" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="421" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhP-5i-w6B">
-                        <rect key="frame" x="8" y="65" width="405" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhP-5i-w6B">
+                        <rect key="frame" x="8" y="80.5" width="405" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I1l-2z-I8F">
-                        <rect key="frame" x="8" y="24" width="67.5" height="17"/>
+                        <rect key="frame" x="8" y="24" width="67.5" height="32.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFz-ho-S2e">
-                                <rect key="frame" x="0.0" y="0.5" width="2" height="16"/>
+                                <rect key="frame" x="0.0" y="8.5" width="2" height="16"/>
                                 <color key="backgroundColor" name="SubColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="2" id="sCK-Bu-o65"/>
@@ -35,7 +35,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="劇情簡介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFd-vi-hVg">
-                                <rect key="frame" x="10" y="0.0" width="57.5" height="17"/>
+                                <rect key="frame" x="10" y="8" width="57.5" height="17"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -44,6 +44,7 @@
                     </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="AhP-5i-w6B" secondAttribute="bottom" constant="24" id="8aj-v3-mXM"/>
                     <constraint firstAttribute="trailing" secondItem="AhP-5i-w6B" secondAttribute="trailing" constant="8" id="D2n-Zj-uNJ"/>
                     <constraint firstItem="I1l-2z-I8F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="fUF-HZ-rai"/>
                     <constraint firstItem="AhP-5i-w6B" firstAttribute="top" secondItem="I1l-2z-I8F" secondAttribute="bottom" constant="24" id="oT0-gZ-koK"/>
